--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ members = ["core", "minitorch-examples"]
 resolver = "2"
 
 [workspace.dependencies]
-ndarray = "0.17.1" # `ndarray` will be our workhorse for tensor math on the CPU.
-rand = "0.9.2"     # For random weight initialization
+ndarray = "0.17"  # `ndarray` will be our workhorse for tensor math on the CPU.
+rand = "0.9"      # For random weight initialization
+dyn-clone = "1.0" # To store Box<dyn MyTrait> or Arc<dyn MyTrait> without knowing concrete types
